fixed the time position for messages when the date is added. if the string is too long, an ellipsis is set.

--- a/assets/less/views/messages.less
+++ b/assets/less/views/messages.less
@@ -16,6 +16,7 @@
 				border-bottom: 1px solid #aaa;
 				.box-fix;
 				cursor: pointer;
+				position: relative;
 				.left {
 					.userimg {
 						.border-radiuses(0px, 0px, 5px, 5px);
@@ -35,8 +36,16 @@
 					font-size: 80%;
 					color: #888;
 					float: right;
-					margin-right: 5px;
-					margin-top: 10px;
+					overflow: hidden;
+					white-space: nowrap;
+					text-overflow: ellipsis;
+					line-height: 12px;
+					display: block;
+					margin-bottom: 0;
+					position: absolute;
+					bottom: 1%;
+					right: 1%;
+					text-align: right;
 				}
 				&:hover {
 					background-color: @primaryLightest;
